yaml/ingress-nginx/ingress-new-apiversion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-new
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx # 很重要，这样才能被ingress-controller识别。
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: grafana-new.rongyi.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
        pathType: ImplementationSpecific
